@@ -1,3 +1,8 @@
+2008-04-07  Jason Merrill  <jason@redhat.com>
+
+	PR c++/35734
+	* g++.dg/warn/ctor1.C: New.
+
 2008-04-05  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/35833
